--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Changes file for {{$dist->name}}
 
 {{$NEXT}}
 
+        Dummy App::GitGitr package
+
 0.2       2014-04-05 23:33:07-07:00 America/Los_Angeles
 
         Created Changes file
