--- a/Changes
+++ b/Changes
@@ -2,6 +2,12 @@ Changes file for {{$dist->name}}
 
 {{$NEXT}}
 
+        Added 'no_symlink' option
+        General cleanup & stuff
+        Documentation (thanks to Tom Metro for the asskick)
+        Update dist.ini to generate Makefile.PL in repo
+        Update dist.ini to generate README.md in build & repo
+        
 0.3       2014-04-05 23:41:32-07:00 America/Los_Angeles
 
         Dummy App::GitGitr package
