Switch homepage to pretty version

--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Changes file for {{$dist->name}}
 {{$NEXT}}
 
         Doc tweaks
+        Switch homepage to pretty version
 
 0.4       2014-04-06 12:20:14-07:00 America/Los_Angeles
 
