--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Changes file for {{$dist->name}}
 
 {{$NEXT}}
 
+        CPAN DAY RELEASE!
+
 0.5       2014-05-31 11:41:30-07:00 America/Los_Angeles
 
         Doc tweaks
