--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Changes file for {{$dist->name}}
 
 {{$NEXT}}
 
+        No changes since last dev release. 
+
 0.8       2015-03-29 23:54:53-04:00 America/New_York (TRIAL RELEASE)
 
         Add compilation tests
