--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Changes file for {{$dist->name}}
 
 {{$NEXT}}
 
+  Move App::GitGitr::Cmd to App::GitGitr. Should make PAUSE happier.
+
 0.901     2015-06-27 13:23:07-07:00 America/Los_Angeles
 
         Doc tweak
