--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Changes file for {{$dist->name}}
 
 {{$NEXT}}
 
+  Switch the _other_ LWP::Simple function call to HTTP::Tiny too...
+
 0.905     2017-03-20 15:03:15-07:00 America/Los_Angeles
 
   Switch from LWP::Simple to HTTP::Tiny
