--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Changes file for {{$dist->name}}
 
 {{$NEXT}}
 
+ Update repo metadata
+
 0.906     2017-03-20 15:14:59-07:00 America/Los_Angeles
 
   Switch the _other_ LWP::Simple function call to HTTP::Tiny too...
